--- a/measure/ch1.tex
+++ b/measure/ch1.tex
@@ -263,6 +263,18 @@ The precise formulation of these are:
 \begin{theorem}
     {Given $\varepsilon>0$ and a measurable set $E$ of finite measure, we can find $F=\cup_{i=1}^K Q_i$ a union of closed cubes such that $m(E\triangle F)\leq \varepsilon$}
 \end{theorem}
-\thmp{\textbf{(Egorov)} Let $f_k$ be a sequence of measurable functions defined on a measurable set $E$ ($m(E)<\infty$), converging to $f$ pointwise. Given $\varepsilon>0$, there exists a closed set $A_{\varepsilon}\subset E$ such that $m(E-A_{\varepsilon})<\varepsilon$ and $f_k\to f$ uniformly on $A_{\varepsilon}$.}{Define $$E^n_k:=\{x\in E:|f_j(x)-f(x)|<1/n \ \forall \ j \geq k\}$$ These sets are measurable (since $|\cdot|$ is measurable and differences are measurable). Note that for a fixed $n$, $E^n_{k}\subseteq E^n_{k+1}$ and these sets ultimately converge to $E$ itself since for any $x$ in $E$, and for a given $1/n$ there exists $k$ such that $|f_j(x)-f(x)|<1/n$ for all $j>k$. From limit exchange, $m(E)=\lim_{k \to \infty} m(E^n_k)<\infty$. Therefore, for any $n,$ there exists $n_k$ so that $m(E)-m(E^n_{k_n})<1/2^n$. We then have, $$|f_j(x)-f(x)|<1/n \text{ whenever } j>k_n \text{ and }x \in E^n_{k_n}$$ }
+\thmp{\textbf{(Egorov)} Let $f_k$ be a sequence of measurable functions defined on a measurable set $E$ ($m(E)<\infty$), converging to $f$ pointwise. Given $\varepsilon>0$, there exists a closed set $A_{\varepsilon}\subset E$ such that $m(E-A_{\varepsilon})<\varepsilon$ and $f_k\to f$ uniformly on $A_{\varepsilon}$.}{Define $$E^n_k:=\{x\in E:|f_j(x)-f(x)|<1/n \ \forall \ j \geq k\}$$ These sets are measurable (since $|\cdot|$ is measurable and differences are measurable). Note that for a fixed $n$, $E^n_{k}\subseteq E^n_{k+1}$ and these sets ultimately converge to $E$ itself since for any $x$ in $E$, and for a given $1/n$ there exists $k$ such that $|f_j(x)-f(x)|<1/n$ for all $j>k$. From limit exchange, $m(E)=\lim_{k \to \infty} m(E^n_k)<\infty$. Therefore, for any $n,$ there exists $n_k$ so that $m(E-E^n_{k_n})=m(E)-m(E^n_{k_n})<1/2^n$. We then have, $$|f_j(x)-f(x)|<1/n \text{ whenever } j>k_n \text{ and }x \in E^n_{k_n}$$ 
+Let $N$ be so that $\sum_N^{\infty} 1/2^n \leq \varepsilon/2$ (for some given $\varepsilon$). Consider $$F_{\varepsilon}=\cap_N^{\infty} E^n_{k_n}$$
 
+$E-F_{\varepsilon} \subseteq \cup_{N}^{\infty}E-E^n_{k_n} $ which gives $$m(E-F_{\varepsilon})\leq \varepsilon/2$$
+
+Let $\delta>0$, choose $n \geq N$ so that $1/n\leq \delta$. Suppose $x \in F_{\varepsilon}$. This implies $x\in \cap_{N}^{\infty} E^n_{k_n}$ which means that $$|f_j(x)-f(x)|<1/n\leq \delta \text{ whenever }j\geq k_n$$ which means that we have uniformity on $F_{\varepsilon}$. Now we pass to a smaller closed set $A_{\varepsilon}\subseteq F_{\varepsilon}$ so that $m(F_{\varepsilon}-A_{\varepsilon})\leq \varepsilon$, and on $A_{\varepsilon}$ convergence is uniform.
+}
+\thmp{\textbf{(Lusin)} Let $f:E\to \RR$ be a finite valued, measurable function defined on a set of finite measure $E$. For all $\varepsilon>0$ there exists a closed set $A_{\varepsilon}$ so that $m(E-A_{\varepsilon})<\varepsilon$ and $f|_{A_{\varepsilon}}$ is continuous. }{
+\textbf{Note that, this \emph{does not state that} $f$ is continuous on the set $A_{\varepsilon}$ but simply that when $f$ is viewed as a function on $A_{\varepsilon}$, it is continuous.}
+\\\\ Let $f_n$ be a sequence of step functions such that $f_n \to f$ pointwise $a.e.$ We shall assume that the convergence happens on $E$ itself, since the remainder set is of measure 0 anyways. For $f_n$, we can remove a set $E_n$ from the domain to make $f_n$ continuous (This can be done since step functions, defined on $\RR^d$, are discontinuous on the $d-1$ dimensioned subspaces that are the boundaries of each rectangle on which they are defined. We can remove a finite number of small rectangles containing each of these subspaces) such that $m(E_n)\leq 1/2^n$. Let $N$ be such that $\sum_{N}^{\infty}1/2^n\leq\varepsilon/2$ (for some given $\varepsilon$).
+We look at $$F_N=\cup_{N}^{\infty}E_n \text{ such that }m(E-F_N)=m(E-\cup_{N}^{\infty}E_n)=m(E)-m(\cup_N^{\infty}E_n)\geq m(E)-\varepsilon/2$$
+Let $G_N=E-F_N$, our set of consideration for a given $\varepsilon$. We then have $m(E-G_N)\leq \varepsilon/2$, and on $G_N$, which is $E-F_N$, all $f_n$ after $N$ are continuous. From Egorov, we have a set $A_{\varepsilon/2}\subset G_N$ so that $m(G_N-A_{\varepsilon/2})\leq \varepsilon/2$ and $f_n$ beyond $N$ are uniformly convergent to $f$. $m(E-A_{\varepsilon/2})=m(E-G_N)+m(G_N-A_{\varepsilon/2})\leq \varepsilon$. So for a given $\varepsilon>0$, we have a closed set $A_{\varepsilon/2}$ so that $f_n$ beyond a certain $N_{\varepsilon}$ converges uniformly on $A_{\varepsilon/2}$, and $f_n$ are all continuous on $A_{\varepsilon/2}$. Therefore, on $A_{\varepsilon/2}$ the uniform limit $f$ of the sequence of continuous functions is continuous on $A_{\varepsilon}$. \textbf{(See next Lemma)} 
+}
+\lemp{\textbf{(Throwaway)} If $f_n:(X,d)\to \RR$ is a sequence of continuous functions such that $f_n \to f$ uniformly, then $f$ is continuous.}{Let $x\in X$ and $\varepsilon>$. We want a $\delta>0$ such that $|f(x)-f(z)|<\varepsilon$ whenever $z \in B_{\delta}(x)$. Note that $|f_n(x)-f(x)|<\varepsilon/3$ and $|f_n(z)-f(z)|<\varepsilon/3$ whenever $n \geq N_{\varepsilon}$, and there is a $\delta_0$ so that $|f_n(x)-f_n(z)|<\varepsilon/3$ whenever $z\in B_{\delta}(x)$. Consider $|f(x)-f(z)|=|f(x)-f_n(x)+f_n(x)-f_n(z)+f_n(z)-f(z)|\leq |f_n(x)-f(x)|+|f_n(x)-f_n(z)|+|f_n(z)-f(z)|\leq \varepsilon$ whenever $n \geq N_{\varepsilon}$, and $z \in B_{\delta}(x)$. We have found our $\delta$. Hence, $f$ is continuous. }
 \end{document}
